--- a/src/screens/header/header.css
+++ b/src/screens/header/header.css
@@ -1,11 +1,12 @@
 .main-info {
     display: flex;
-    position: absolute;
+    /* position: absolute; */
     /* color: var(--font-color); */
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+    margin-top: 1000;
     flex-direction: column;
     justify-content: center;
     align-items: center;
